fix project cards, fixed heights/paddings/clipping

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,7 +75,7 @@ body {
 @media (max-width: 767px) {
   .project-container {
     width: 345px;
-    height: 514px;
+    height: 444px;
     border-radius: 16px;
   }
 }
